添加一个数据导出接口

--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,13 @@
 			<artifactId>jackson-module-jaxb-annotations</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
+		
+		<!-- fastjson -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.1.41</version>
+		</dependency>
 
 		<!-- 页面抓取相关 -->
 		<dependency>
